Fixed hero dark mode image

--- a/src/sections/Contact/ContactStyles.module.css
+++ b/src/sections/Contact/ContactStyles.module.css
@@ -16,6 +16,7 @@
 
   a {
     display: inline-block;
+    margin: 0;
   }
 
   a:hover {
